--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,7 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
+  "angularCompilerOptions": { "enableIvy": false },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
